--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "@types/node": "^16.18.80",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
+    "datatables.net": "^2.0.0",
+    "datatables.net-dt": "^2.0.0",
+    "firebase": "^10.8.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.10.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.29"
   }
 }
