--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "restaurant-dashboard",
-  "homepage": "https://mohammad-nour-alawad.github.io/restaurant-dashboard",
+  "homepage": "https://mohammad-nour-alawad.github.io/restaurant-dashboard/revenues",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
